[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsm2dtm"
version = "0.3.3"
authors = [
    { name="Naman Jain", email="naman.jain@btech2015.iitgn.ac.in" },
]
description = "Generate DTM (Digital Terrain Model) from DSM (Digital Surface Model)"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "numpy>=1.21",
    "rasterio>=1.3",
    "scipy>=1.8",
    "pyproj>=3.4",
]

[project.urls]
Homepage = "https://github.com/seedlit/dsm2dtm"

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "ruff",
    "mypy",
    "pre-commit",
    "pooch",
]

[project.scripts]
dsm2dtm = "dsm2dtm.core:main_cli"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "NPY"]
ignore = ["UP006", "UP007", "UP035"]  # keep typing.Tuple/Dict for QGIS Python 3.9 compatibility

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
mypy_path = "src"
